fix: Production deployment configuration
- Add app_name to Settings for logging
- Add DB_PASSWORD environment variable for database container
- Fix database password configuration in compose.yaml
- Successfully tested production deployment locally

--- a/deploy/compose.yaml
+++ b/deploy/compose.yaml
@@ -38,7 +38,7 @@ services:
     image: postgres:16-alpine
     environment:
       - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_PASSWORD=${DB_PASSWORD:-postgres}
       - POSTGRES_DB=trading
     ports:
       - "5439:5432"
